<resources>
    <string name="app_name">LuckyNumberApp</string>
    <string name="welcome_title">Welcome to Lucky Number</string>
    <string name="enter_name_hint">Please enter your name</string>
    <string name="wish_luck_button">Wish me a Luck!</string>
    <string name="your_lucky_number_is">Your Lucky Number is:</string>
    <string name="share_lucky_number_button">Share my Lucky Number</string>
    <string name="please_enter_name_toast">Please enter your name!</string>
    <string name="share_subject">My Lucky Number!</string>
    <string name="share_message_template">Hey, %1$s! My lucky number today is %2$d.</string>
    <string name="share_via">Share your lucky number via</string>

    <!-- Content Descriptions for Accessibility -->
    <string name="purple_feather_desc">Decorative purple feather</string>
    <string name="golden_feather_desc">Decorative golden feather</string>
    <string name="dice_desc">Two red dice</string>
</resources>